<resources>

    <!-- GENERAL -->
    <string name="app_name">Hogar Rural</string>
    <string name="app_sub">0 resultados</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btnBack">VOLVER</string>
    <string name="loremIpsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.</string>
    <string name="showMore">Ver más</string>
    <string name="showMore2">Mostrar más</string>
    <string name="ok">OK</string>
    <string name="send">Enviar</string>
    <string name="input_mail">Introduce el email de usuario</string>
    <string name="input_passw">Introduce la contraseña</string>

    <!-- SPLASH -->
    <string name="splash_txt_hogar">HOGAR</string>
    <string name="splash_txt_rural">RURAL</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_destiny">Introduce un destino…</string>
    <string name="main_btnExplore">EXPLORAR</string>

    <!-- EXPLORAR -->
    <string name="explorer_filters">FILTROS</string>
    <string name="explorer_map">MAPA</string>

    <!-- BUSCAR -->
    <string name="search_insert">Introduce un nuevo destino... </string>

    <!-- FILTROS -->
    <string name="filters_symbol_less">-</string>
    <string name="filters_nPersons">- Número de personas -</string>
    <string name="filters_symbol_plus">+</string>
    <string name="filters_entrance">ENTRADA</string>
    <string name="filters_choose">- elegir -</string>
    <string name="filters_exit">SALIDA</string>
    <string name="filters_valorations">VALORACIONES</string>
    <string name="filters_complete">ÍNTEGRO</string>
    <string name="filters_rooms">HABITACIONES</string>
    <string name="filters_price">PRECIOS</string>
    <string name="filters_euros_person"> 0 euros por persona</string>
    <string name="filters_services">SERVICIOS</string>
    <string name="filters_adapted">Adaptado</string>
    <string name="filters_air">Aire \nacondicionado</string>
    <string name="filters_barbacue">Barbacoa</string>
    <string name="filters_bath">Baño en \nhabitación</string>
    <string name="filters_pool">Piscina</string>
    <string name="filters_climatized">Piscina \nclimatizada</string>
    <string name="filters_garden">Jardín</string>
    <string name="filters_heating">Calefacción</string>
    <string name="filters_jacuzzi">Jacuzzi</string>
    <string name="filters_kitchen">Cocina \nintegrada</string>
    <string name="filters_mountain">Montaña</string>
    <string name="filters_parking">Parking</string>
    <string name="filters_beach">Playa</string>
    <string name="filters_breakfast">Desayuno \nincluido</string>
    <string name="filters_children">Zona \ninfantil</string>
    <string name="filters_fireplace">Chimenea</string>
    <string name="filters_pets">Permite \nmascotas</string>
    <string name="filters_spa">Spa</string>
    <string name="filters_tv">Televisión</string>
    <string name="filters_wifi">Wifi</string>
    <string name="filters_order">ORDENAR POR</string>
    <string name="filters_cheaper">Precios más baratos</string>
    <string name="filters_expensive">Precios más caros</string>
    <string name="filters_moreValor">Mejor valorados</string>
    <string name="filters_numComentary">Número de comentarios</string>
    <string name="filters_btnConfirm">COMPROBAR</string>

    <!-- VISTA DETALLE DE LA CASA -->
    <string name="house_place">Lugar de la casa</string>
    <string name="house_rental">Alquiler: tipo</string>
    <string name="house_nPerson">nº personas</string>
    <string name="house_price">Precio €/noche</string>
    <string name="house_price2">Indica el coste por persona de la estancia por noche (€/noche)</string>
    <string name="house_nOpinion"> opiniones</string>
    <string name="house_valoration">Valoraciones</string>
    <string name="house_arrive">Cómo llegar:</string>
    <string name="house_disponibility">Consulta precios y disponibilidad</string>
    <string name="house_features">CARACTERÍSTICAS DEL ALOJAMIENTO</string>
    <string name="house_activities">ACTIVIDADES</string>
    <string name="house_placeInterest">LUGARES DE INTERÉS</string>
    <string name="house_services">CARACTERÍSTICAS Y SERVICIOS</string>
    <string name="house_icons">Aquí se mostrarán los iconos de los servicios.</string>
    <string name="house_comments">COMENTARIOS</string>
    <string name="house_showComments">Aquí se mostrarán los comentarios</string>
    <string name="house_addComment">Añadir un comentario…</string>
    <string name="house_owner">El propietario</string>
    <string name="house_lastUpdate">última actualización: </string>
    <string name="house_info_comments">Incluye tu comentario y tu puntuación a esta casa:</string>

    <!-- RECYCLERVIEW DE EXPLORAR -->
    <string name="customExplore_namePlace">Lugar de la casa</string>

    <!-- MI PERFIL -->
    <string name="myProfile_info">Si deseas iniciarte como usuario tendrás las siguientes ventajas:\n\n- Tus datos, lugares favoritos y otros marcadores se guardarán para recuperarlos en caso de cambiar de dispositivo.\n- Podrás incluir tu mismo una oferta de casa rural y disponer de las funciones de propietario para gestionarlo.\n- Diponer de la sección “Novedades” donde te sugerimos casas rurales en función de tus gustos.\n\n\nSi dispone ya de una cuenta de usuario inicie sesión a continuación:</string>
    <string name="myProfile_startSession">INICIAR SESIÓN</string>
    <string name="myProfile_info2">En cambio para darse de alta como usuario pulse aquí y rellene el formulario:</string>
    <string name="myProfile_updateUser">DARSE DE ALTA COMO USUARIO</string>

    <!-- FORMULARIO ALTA USUARIO -->
    <string name="formUser_title">DARSE DE ALTA COMO USUARIO</string>
    <string name="formUser_title_modify">MODIFICAR DATOS DE USUARIO</string>
    <string name="formUser_info">Rellena el siguiente formulario, acepta los terminos de uso y pulsa el boton de registrarse.\n\nLos campos que continen el signo * son obligatorios.</string>
    <string name="formUser_info_modify">Modifica los campos que deseas cambiar y acepta los cambios al final.\n\nLos campos que continen el signo * son obligatorios.</string>
    <string name="formUser_nick">* Introduce el nombre de usuario</string>
    <string name="formUser_mail">* Introduce el email de usuario</string>
    <string name="formUser_passw">* Introduce la contraseña</string>
    <string name="formUser_repitPassw">* Repite la contraseña</string>
    <string name="formUser_avatar">Selecciona una imagen de perfil de usuario</string>
    <string name="formUser_selectImage">Seleccionar imagen</string>
    <string name="formUser_name">* Introduce el nombre real</string>
    <string name="formUser_lastname">* Introduce los apellidos</string>
    <string name="formUser_dni">* Introduce el DNI con su letra</string>
    <string name="formUser_birthday">* Introduce la fecha de nacimiento</string>
    <string name="formUser_phone">* Introduce un número de teléfono</string>
    <string name="formUser_address">Introduce una dirección de domicilio</string>
    <string name="formUser_postal">Introduce el código postal</string>
    <string name="formUser_municipatily">Introduce el municipio</string>
    <string name="formUser_province">Introduce la provincia</string>
    <string name="formUser_terms">Aceptar </string>
    <string name="formUser_terms_link">términos y condiciones de uso</string>
    <string name="formUser_advertising">Deseo recibir ofertas e información por email</string>
    <string name="formUser_register">REGISTRARSE</string>
    <string name="formUser_save_changes">GUARDAR CAMBIOS</string>

    <!-- DATOS DEL USUARIO -->
    <string name="dataUser_titleName">Nombre: </string>
    <string name="dataUser_titleDni">DNI/ NIF: </string>
    <string name="dataUser_titleBirthday">Fecha nacimiento: </string>
    <string name="dataUser_titlePhone">Teléfono: </string>
    <string name="dataUser_titleMail">E-mail: </string>
    <string name="dataUser_personData">DATOS PERSONALES</string>
    <string name="dataUser_titleAddress">Dirección: </string>
    <string name="dataUser_titlePostal">Código postal: </string>
    <string name="dataUser_titleMunicipality">Municipio: </string>
    <string name="dataUser_titleProvince">Provincia: </string>
    <string name="dataUser_modifyUser">MODIFICAR DATOS DE USUARIO</string>
    <string name="dataUser_closeSession">CERRAR SESIÓN</string>

    <!-- CUENTA DE USUARIO -->
    <string name="accountUser_myProfile">Mi perfil</string>
    <string name="accountUser_myhouses">Mis casas</string>
    <string name="accountUser_myBookings">Mis Reservas</string>

    <!-- MIS CASAS -->
    <string name="myHouses_addHouse">Añadir nueva casa</string>

    <!-- DETALLE DEL FORMULARIO DE CASAS -->
    <string name="houseUp_info">Rellena el siguiente formulario para dar de alta la casa que deseas ofertar.</string>
    <string name="houseUp_info2">Elija una foto o varias del aspecto de la vivienda.\nMostrar fotos ayudará muchísimo a interesarse por el lugar.</string>
    <string name="houseUp_imageRemove">Eliminar</string>
    <string name="houseUp_namePlace">Introduce el nombre del lugar</string>
    <string name="houseUp_type">¿Qué tipo de vivienda quieres ofrecer?</string>
    <string name="houseUp_complete">Íntegro</string>
    <string name="houseUp_rooms">Habitaciones</string>
    <string name="houseUp_txtPeople">Introduzca la capacidad máxima de inquilinos:</string>
    <string name="houseUp_nPersons">1 personas</string>
    <string name="houseUp_amount">Introduzca la capacidad máxima de inquilinos:</string>
    <string name="houseUp_eurosDay">0 €/noche</string>
    <string name="houseUp_btnDateDisponibility">FECHAS DISPONIBLES \nPARA LA VIVIENDA</string>
    <string name="houseUp_features">Escribe una breve descripción de la casa y sus características principales:</string>
    <string name="houseUp_activities">Escribe las actividades que se pueden realizar en la casa y/o alrededores del lugar:</string>
    <string name="houseUp_placeInterest">Escribe los lugares de interés que se pueden disfrutar por la zona:</string>
    <string name="houseUp_services">Selecciona los servicios que ofrece la vivienda:</string>
    <string name="houseUp_publish">PUBLICAR OFERTA</string>

    <!-- DESTACADOS -->
    <string name="outstanding_news">Novedades</string>
    <string name="outstanding_lowprice">Bajan de precio</string>

    <!-- ADAPTER -->
    <string name="adapter_price"> €/noche</string>
    <string name="adapter_people"> personas</string>
    <string name="adapter_comments"> opinones</string>
    <string name="adapter_rental_1">Íntegro</string>
    <string name="adapter_rental_2">Habitaciones</string>

    <!-- DIPONIBILIDAD DE FECHAS -->
    <string name="disponibility_info">Seleccione una fecha disponible y reserve plaza en el botón "Reservar en la fecha indicada".</string>
    <string name="disponibility_info2">Recuerde que necesita iniciar sesión de usuario para realizar reservas.</string>
    <string name="disponibility_info3">Noches ya ocupados o no disponibles.</string>
    <string name="disponibility_btnConfirm">Reservar en la fecha indicada</string>

    <!-- CUSTOM VIEW BOOKINGS -->
    <string name="customBookings_nameUser">Nombre de usuario</string>
    <string name="customBookings_date">00 / 00 / 0000</string>

</resources>